<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSLocation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_json">DisplayJSON</string>
    <string name="hello_world">Hello World</string>
    <string name="atm_longitude">ATMLongitute:</string>
    <string name="atm_latitude">ATMLatitude:</string>
    <string name="longitude">Longitute:</string>
    <string name="latitude">Latitude:</string>
    <string name="tv_debug">4. Start Debug View</string>
    <string name="debug">DEBUG</string>
    <string name="vibrate">VIBRATE</string>
    <string name="tv_vibrate">3. Trigger a vibration</string>
    <string name="button_press">2. Press a button on Pebble</string>
    <string name="button_recieved">None yet</string>
    <string name="install_pebble">INSTALL</string>
    <string name="tv_install">1. Install Watchapp</string>
    <string name="title_activity_debug">Debug</string>
    <string name="send_distance">Send Distance</string>
    <string name="send_ETA">Send ETA</string>
    <string name="send_bearing">Send Bearing</string>

</resources>
