<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jzheadley.CashPointer.DebugActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="@dimen/defaultTextSize" />

        <TextView
            android:id="@+id/latitude_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="@dimen/defaultTextSize" />

        <TextView
            android:id="@+id/longitude_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atm_latitude"
            android:textSize="@dimen/defaultTextSize" />

        <TextView
            android:id="@+id/atm_lat_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atm_longitude"
            android:textSize="@dimen/defaultTextSize" />

        <TextView
            android:id="@+id/atm_long_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/defaultTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/send_distance"
            android:id="@+id/distance_button"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/send_ETA"
            android:id="@+id/eta_button"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
